--- a/index.html
+++ b/index.html
@@ -1,17 +1,3 @@
-<table style="width:100%">
-  <tr>
-    <th>Firstname</th>
-    <th>Lastname</th>
-    <th>Age</th>
-  </tr>
-  <tr>
-    <td>Jill</td>
-    <td>Smith</td>
-    <td>50</td>
-  </tr>
-  <tr>
-    <td>Eve</td>
-    <td>Jackson</td>
-    <td>94</td>
-  </tr>
-</table>
+<html>
+  <iframe src="demo_iframe.htm" height="200" width="300" title="Iframe Example"></iframe>
+</html>
