--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" href="styles.css">
+  <head>
+    <title>Mysteries</title>
+    <style>
+      body
+      {
+        background-color:grey;
+      }
+      h1
+      {
+        color: blue;text-align:centre;font-family:Times New Roman;font-size:28px;
+      }
+      p
+      {
+        color: black;font-size:12px
+      }
+    </style>
 </head>
-<body>
-
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
+    <body>
+      <h1><b>Mysteries</b></h1>
+      <p>This is a paragraph</p>
+    </body>
 </html>
+  
